--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="work">
         <div class="container px-5">
             <header>
-                <h2 id="work-subtitle"><i class="bi bi-work-fill"></i>WORK </h2>
+                <h2 id="work-subtitle"><i class="bi bi-award-fill"></i>WORK </h2>
             </header>
             <div class="main-body" id="work-md"></div>
 
