--- a/index.html
+++ b/index.html
@@ -151,9 +151,13 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="work">
         <div class="container px-5">
             <header>
-                <h2 id="work-subtitle"><i class="bi bi-award-fill"></i>WORK </h2>
+                <h2 id="work-subtitle"><i class="bi bi-briefcase-fill"></i>WORK </h2>
             </header>
             <div class="main-body" id="work-md"></div>
+            <iframe class="pdf" 
+                src="static/assets/doc/Anutam_Srinivasan_CV.pdf"
+            width="800" height="500">
+            </iframe>
 
         </div>
     </section>
@@ -165,9 +169,10 @@
         <div class="container px-5">
             <div class="text-white-50 small">
                 <div id="copyright-text" class="mb-2"></div>
-                <a id="github-link" href="https://github.com/senli1073">Github</a>
+                <a id="github-link" href="https://github.com/AnutamKS">Github</a>
                 <span class="mx-1">&middot;</span>
-                <a id="license-link" href="https://github.com/senli1073/senli1073.github.io/blob/main/LICENSE">License</a>
+                <a id="license-link" href="https://github.com/AnutamKS/anutamks.github.io/blob/main/LICENSE">License</a>
+                <a id="source-link" href="https://github.com/senli1073/senli1073.github.io">Webpage Adapted From Here</a>
             </div>
         </div>
     </footer>
