--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="work">
         <div class="container px-5">
             <header>
-                <h2 id="work-subtitle"><i class="bi bi-briefcase-fill"></i>WORK </h2>
+                <h2 id="work-subtitle"><i class="bi bi-briefcase-fill"></i>&nbsp;WORK </h2>
             </header>
             <div class="main-body" id="work-md"></div>
             <iframe class="pdf" 
                 src="static/assets/doc/Anutam_Srinivasan_CV.pdf"
-            width="800" height="500">
+            width="800" height="700">
             </iframe>
 
         </div>
@@ -172,6 +172,7 @@
                 <a id="github-link" href="https://github.com/AnutamKS">Github</a>
                 <span class="mx-1">&middot;</span>
                 <a id="license-link" href="https://github.com/AnutamKS/anutamks.github.io/blob/main/LICENSE">License</a>
+                <span class="mx-1">&middot;</span>
                 <a id="source-link" href="https://github.com/senli1073/senli1073.github.io">Webpage Adapted From Here</a>
             </div>
         </div>
